# Siggy

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
config/: config.example.ini
docs/: aws__s3_8cpp.html  aws__s3_8cpp.js  aws__s3_8h.html  aws__s3_8h.js  config_8cpp.js  config_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  globals.html  globals_func.html  md_README.html  pages.html  structConfig-members.html  structConfig.html  structConfig.js
docs/html/: README_8md.html  aws__s3_8cpp.html  aws__s3_8h_source.html  classes.html  config_8cpp.html  config_8h.html  config_8h.js  files.html  index.html  main_8cpp.html  main_8cpp.js  navtreedata.js  navtreeindex0.js
docs/html/html/: annotated.html  annotated_dup.js  aws__s3_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  functions.html  functions_vars.html  index.html
docs/html/html/search/: all_2.js  all_8.js  files_0.js  functions_3.js  functions_5.js  pages_0.js  variables_0.js
docs/html/search/: all_9.js  searchdata.js
docs/search/: all_0.js  all_4.js  all_7.js  all_8.js  all_a.js  functions_0.js  functions_1.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_5.js  pages_6.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js
latex/: index.tex  refman.tex
src/: aws_s3.cpp  aws_s3.h  config.cpp  config.h  main.cpp
